# C_Structures

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  REVIEW.md  architecture.md  build_windows.sh  cmake_install.cmake  file_tree.txt  log.md  physics_notes.md  requirements.sh  start.sh  starter_guide.md  test_structure.csv
.github/workflows/: linux.yml
C_Structures/: CMakeLists.txt
C_Structures/include/model/: Beam.hpp  Node.hpp
C_Structures/include/physics/: Simulator.hpp
include/data/: CSVHandler.hpp
include/graphics/: Camera.hpp  Shader.hpp
include/model/: Beam.hpp  Node.hpp
include/physics/: Determinacy.hpp  DistributedLoad.hpp  FrameElement.hpp  FrameSimulator.hpp  MemberForces.hpp  Simulator.hpp
include/ui/: GlassBoxPanel.hpp  LoadsPanel.hpp  ModelCheckPanel.hpp  ReactionsPanel.hpp  ResultsPanel.hpp  Templates.hpp  UIHandler.hpp
include/visualization/: ForceRenderer.hpp
resources/icons/: README.md  generate.py  index.html  manifest.json
shaders/: force_fragment.glsl
src/: build_meta.cpp  main.cpp
src/data/: CSVHandler.cpp
src/graphics/: Camera.cpp
src/model/: Beam.cpp  Node.cpp
src/physics/: Determinacy.cpp  DistributedLoad.cpp  FrameElement.cpp  FrameSimulator.cpp  MemberForces.cpp  Simulator.cpp
src/ui/: GlassBoxPanel.cpp  LoadsPanel.cpp  ModelCheckPanel.cpp  ReactionsPanel.cpp  ResultsPanel.cpp  Templates.cpp  UIHandler.cpp
src/visualization/: ForceRenderer.cpp  RendererUtils.cpp  RendererUtils.hpp
tests/: CMakeLists.txt  CSVHandlerTests.cpp  IntegrationTests.cpp  ModelTests.cpp  PhysicsTests.cpp  test_main.cpp
